# vane_web3

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TECHNICAL_ARCHITECTURE.md  package.json
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
db/: Cargo.toml  dev.db  schema.prisma  test1.db  test2.db  test3.db
db-wasm/: Cargo.toml
db-wasm/src/: lib.rs
db/prisma/: Cargo.toml
db/prisma/src/: main.rs
db/src/: db.rs  db_tests.rs  lib.rs
integration-test/: Cargo.toml
integration-test/src/: lib.rs
integration-test/wasm/: README_TEST_UPDATES.md  package.json  tsconfig.json  vitest.config.ts
integration-test/wasm-e2e-ts/: .gitignore  README.md  bnb_token.txt  evm_token_info.txt  package.json  package.json (update dependencies)  playwright.config.ts  relay-info.json  run_e2e.sh  start-relay.ts  tsconfig.json  vitest.config.ts  vitest.config.ts (already exists)  vitest.setup.ts  wasm.test.ts  wasm_node1.test.ts  wasm_node2.test.ts  wasm_node3_mal.test.ts  wasm_node_self.test.ts
integration-test/wasm-e2e-ts/utils/: global_event_recorder.ts  global_setup.ts  node_coordinator.ts  wasm_utils.ts
integration-test/wasm/test/: setup.ts  wasm-node.test.ts
node/: Cargo.toml  build.rs
node/native/: Cargo.toml  README
node/native/src/: cryptography.rs  lib.rs  p2p.rs  rpc.rs  tx_processing.rs
node/relay/: Cargo.toml  README
node/relay/src/: event_feedback.rs  lib.rs  metric_server.rs  p2p.rs  rpc.rs  telemetry.rs
node/src/: chain_simulator.rs  cryptography.rs  database.rs  lib.rs  light_clients.rs  p2p.rs  rpc.rs  telemetry.rs  tx_processing.rs
node/test_client/: Cargo.toml
node/test_client/src/: main.rs
node/vane-backend/: Cargo.toml  README
node/vane-backend/src/: main.rs  server.rs
node/wasm/: Cargo.toml  README  README_LOGGING.md  build-package.sh
node/wasm/host_functions/: README.md  dht.ts  example_usage.ts  logging.ts  main.ts  networking.ts  package.json  primitives.ts  test_logging.ts  tsconfig.json  wrangler.jsonc
node/wasm/host_functions/.wrangler/tmp/bundle-4wediM/: middleware-insertion-facade.js  middleware-loader.entry.ts
node/wasm/host_functions/.wrangler/tmp/bundle-SocuGE/: middleware-insertion-facade.js  middleware-loader.entry.ts
node/wasm/host_functions/.wrangler/tmp/bundle-zOiRMH/: middleware-loader.entry.ts
node/wasm/host_functions/.wrangler/tmp/dev-gUIM8S/: dht.js  dht.js.map
node/wasm/host_functions/.wrangler/tmp/dev-lTx0CJ/: dht.js  dht.js.map
node/wasm/src/: cryptography.rs  interface.rs  lib.rs  logging.rs  p2p.rs  tx_processing.rs
node/wasm/vane_lib/: README.md  api.ts  main.ts  package.json  primitives.ts  tsconfig.json
node/wasm/vane_lib/pkg/: package.json  vane_wasm_node.d.ts  vane_wasm_node.js  vane_wasm_node_bg.wasm  vane_wasm_node_bg.wasm.d.ts
node/wasm/vane_lib/pkg/host_functions/: cryptography.ts  main.ts  networking.ts
primitives/: Cargo.toml
primitives/src/: data_structure.rs  lib.rs
scripts/: build-wasm-package.sh  db_tests.sh  fund-evm.sh  fund-solana.sh  run_e2e.sh  start-relay.sh
vane_web3_mvp/: .env  README.md  bun.lockb  dump.rdb  index.js  package.json  request.json
