[workspace]
members =[ "app", "db", "integration-test", "node", "primitives","db/prisma", "db-wasm"]
resolver = "2"

# Members for wasm builds
#[workspace.target.'cfg(target_arch = "wasm32")']
#members = ["db-wasm", "node", "primitives"]
#default-members = ["db-wasm", "node", "primitives"]


[workspace.dependencies]

# ========================================= Db ==========================================
hex                                     = { version = "0.4.3", features = ["alloc"] }
aead                                    = { version = "0.5.2", features = ["alloc","bytes","arrayvec"]}
aes-gcm                                 = { version = "0.10.3", features = ["aes","alloc","rand_core","arrayvec"]}
# ========================================= Node ========================================
libp2p                                  = { version = "0.53.2"}
alloy                                   = { version = "0.3"}
alloy-primitives                        = "0.8.11"
sp-runtime                              = { version = "39.0.0"}
jsonrpsee                               = { version = "0.17", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
notion                                  = "0.6.0"
reconnecting-jsonrpsee-ws-client        = "0.4.3"
unsigned-varint                         = { version = "0.8.0", features = ["asynchronous-codec", "codec", "tokio-util", "futures-io", "futures"] }
reqwest                                 = "0.12.7"
airtable-api                            = "0.1.36"
serde_json                              = { version = "1.0.127", features = ["alloc","raw_value"]}
bs58                                    = {version = "0.5.1",features = ["alloc"]}
base58                                  = "0.2.0"
curve25519-dalek                        = "4.1.3"
local-ip-address                        = "0.6.3"
rand                                    = "0.8.5"
sc-service                              = "0.46.0"
moka                                    = { version = "0.12", default-features = false, features = ["future"] }
rcgen                                   = { version = "0.13.1", features = ["crypto"]}
redis                                   = { version = "0.31.0", features = ["tokio-comp"] }

#solana-client-wasm                      = "1.18.0"
#zeroize = "=1.3.0"
# ========================================= Primitives ==================================

# ========================================= IntegrationTests ============================

# ========================================= Shared ======================================
tokio                                   = { version = "1.37.0",features = ["net"] }
anyhow                                  = "1.0.86"
subxt                                   = { version = "0.30.1", default-features = false, features = [ "web"]}
log                                     = { version = "0.4.21", default-features = false }
codec                                   = { version = "3.1.3",features = ["derive"], package = "parity-scale-codec", default-features = false }
serde                                   = { version = "1.0.204", features = ["alloc","derive"] }
simple_logger                           = "5.0.0"
sp-core                                 = { version = "34.0.0", default-features = false}
# ========================================= Local Dependencies ==========================

db                                      = { path = "db" }
db-wasm                                 = { path = "db-wasm"}
integration-test                        = { path = "integration-test" }
node                                    = { path = "node" }
primitives                              = { path = "primitives" }
tokio_with_wasm                         = { version = "0.7.4",features = ["full"]}
# ========================================== Patch =======================================
#[replace]
#zeroize = { git = "https://github.com/MrishoLukamba/utils.git", rev = "5d623ad59af0a923b50d271defa23d99fdc2415c"}
