[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node                                        = { workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio                                       = { workspace = true}
anyhow                                      = { workspace = true}
log                                         = { workspace = true}
simple_logger                               = { workspace = true}
simplelog                                   = "^0.12.0"
clap                                        = { version = "4.5.21", features = ["derive"] }

