[package]
name = "vane_web3_app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-node                                 = { workspace = true}
wasm-node                                   = { workspace = true}
relay-node                                  = { workspace = true}
tokio                                       = { workspace = true}
anyhow                                      = { workspace = true}
log                                         = { workspace = true}
simple_logger                               = { workspace = true}
simplelog                                   = "^0.12.0"
clap                                        = { version = "4.5.21", features = ["derive"] }

#[target.aarch64-unknown-linux-gnu]
#linker = "aarch64-unknown-linux-gnu-gcc"
