[package]
name = "db-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
redb                        = "2.3.0"
web-sys = { version = "0.3.76", features = [
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "Window",
    "Navigator"
]}

serde                       = { workspace = true }
anyhow                      = { workspace = true }
primitives                  = { workspace = true }
log                         = { workspace = true }
hex                         = { workspace = true }
codec                       = { workspace = true }
aead                        = { workspace = true }
aes-gcm                     = { workspace = true }