[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde                       = { workspace = true }
prisma-client-rust          = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = ["sqlite", "migrations"], default-features = false }
anyhow                      = { workspace = true}
primitives                  = { workspace = true}
log                         = { workspace = true}
hex                         = { workspace = true }
tokio                       = { workspace = true}
codec                       = { workspace = true}
sp-core                     = { workspace = true, default-features = false}
aead                        = { workspace = true}
libp2p                      = { workspace = true }
aes-gcm                     = {workspace = true}

[features]
e2e = []