[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde                       = { workspace = true }
anyhow                      = { workspace = true }
primitives                  = { workspace = true }
log                         = { workspace = true }
hex                         = { workspace = true }
codec                       = { workspace = true }
sp-core                     = { workspace = true, default-features = false, features = ["full_crypto"] }
aead                        = { workspace = true }
aes-gcm                     = { workspace = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prisma-client-rust          = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = ["sqlite", "migrations"], default-features = false }
tokio                       = { workspace = true }
libp2p                      = { workspace = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
redb                        = "2.3.0"
web-sys = { version = "0.3.76", features = [
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "Window",
    "Navigator"
]}

[features]
e2e = []
default = []
std = [
    "sp-core/std",
    "codec/std",
    "sp-core/secp256k1"
]