[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node                                        = { workspace = true, features = ["e2e"]}
anyhow                                      = { workspace = true}
tokio                                       = { workspace = true}
db                                          = { workspace = true}
libp2p                                      = { workspace = true}
subxt-signer                                = { version = "0.37.0", features = ["sr25519","ecdsa"], default-features = false}
simplelog                                   = "^0.12.0"
log                                         = "0.4.22"
primitives                                  = { workspace = true}
sp-core                                     = { workspace = true}
codec                                       = { workspace = true}

[features]
e2e = []