[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db                                          = { workspace = true}
log                                         = { workspace = true}
primitives                                  = { workspace = true, features = ["e2e"]}
libp2p                                      = { workspace = true}
sc-network                                  = "0.45.1"
sc-service                                  = { workspace = true}
async-trait                                 = "0.1.81"
unsigned-varint                             = { workspace = true}
anyhow                                      = { workspace = true}
codec                                       = { workspace = true}
tokio                                       = { workspace = true}
tokio-stream                                = "0.1.15"
sp-core                                     = { workspace = true}
subxt                                       = { workspace = true}
alloy                                       = { workspace = true}
sp-runtime                                  = { workspace = true}
reconnecting-jsonrpsee-ws-client            = { workspace = true}
jsonrpsee                                   = { workspace = true}
reqwest                                     = { workspace = true, features = ["json"] }
airtable-api                                = { workspace = true}
tinyrand                                    = "0.5.0"
serde_json                                  = { workspace = true}
base58                                      = { workspace = true}
curve25519-dalek                            = { workspace = true}
local-ip-address                            = { workspace = true}
rand                                        = { workspace = true}
#solana-client-wasm                          = { workspace = true}

[features]
e2e = []