[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db                                          = { workspace = true}
log                                         = { workspace = true}
primitives                                  = { workspace = true, features = ["e2e"]}
libp2p                                      = { workspace = true}
sc-network                                  = "0.45.1"
sc-service                                  = { workspace = true}
async-trait                                 = "0.1.81"
unsigned-varint                             = { workspace = true}
anyhow                                      = { workspace = true}
codec                                       = { workspace = true}
tokio                                       = { workspace = true}
tokio-stream                                = "0.1.15"
sp-core                                     = { workspace = true, default-features = false, features = ["full_crypto"] }
subxt                                       = { workspace = true}
alloy                                       = { workspace = true}
sp-runtime                                  = { workspace = true}
reconnecting-jsonrpsee-ws-client            = { workspace = true}
jsonrpsee                                   = { workspace = true}
reqwest                                     = { workspace = true, features = ["json"] }
airtable-api                                = { workspace = true}
tinyrand                                    = "0.5.0"
serde_json                                  = { workspace = true}
base58                                      = { workspace = true}
curve25519-dalek                            = { workspace = true}
local-ip-address                            = { workspace = true}
rand                                        = { workspace = true}
moka                                        = { workspace = true}
rcgen                                       = { workspace = true}
#solana-client-wasm                          = { workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm                                     = "0.5.0"
tokio_with_wasm                             = { version = "0.7.4", features = ["full"]}
libp2p                                      = { workspace = true, features = ["wasm-bindgen","webtransport-websys","websocket-websys","json"]}
async-stream                                = { version = "0.3.6"}
futures                                     = { version = "0.3.31", features = ["alloc","async-await"]}
lru                                         = "0.12.5"
alloy                                       = { workspace = true, features = ["wasm-bindgen"]}
web3                                        = { version = "0.19.0", default-features = false, features = ["wasm","http","signing"]}
libp2p-webrtc-websys                        = "0.4.0-alpha"

[features]
e2e = []
std = [
    "sp-core/std",
    "codec/std",
    "sp-core/secp256k1",
    "sp-runtime/std"
]