[package]
name = "native-node"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
log                                         = { workspace = true}
primitives                                  = { workspace = true, features = ["e2e"]}
async-trait                                 = "0.1.81"
unsigned-varint                             = { workspace = true}
anyhow                                      = { workspace = true}
codec                                       = { workspace = true}
sp-core                                     = { workspace = true, default-features = false}
sp-runtime                                  = { workspace = true}
base58                                      = { workspace = true}
hex-literal                                 = "0.4.1"
serde_json                                  = { workspace = true}


db                                          = { workspace = true}
moka                                        = { workspace = true}
rcgen                                       = { workspace = true}
reconnecting-jsonrpsee-ws-client            = { workspace = true}
jsonrpsee                                   = { workspace = true}
reqwest                                     = { workspace = true, features = ["json"] }
tokio                                       = { workspace = true}
tokio-stream                                = "0.1.15"
tinyrand                                    = "0.5.0"
curve25519-dalek                            = { workspace = true}
local-ip-address                            = { workspace = true}
rand                                        = { workspace = true}
alloy                                       = { workspace = true,features = ["full"]}
libp2p                                      = { workspace = true, features = ["tcp", "tls", "dns","request-response", "noise", "yamux", "websocket", "ping", "macros","tokio","ecdsa","ed25519"]}
sc-network                                  = "0.45.1"
sc-service                                  = { workspace = true}
subxt                                       = { workspace = true}
redis                                       = { workspace = true}

[features]
e2e = []
std = [
    "sp-core/std",
    "codec/std",
    "sp-runtime/std"
]