[package]
name = "relay-node"
version = "0.1.0"
edition = "2021"
description = "Native-only relay node implementation for Vane Web3"


[dependencies]

libp2p                              = { workspace = true, features = ["json","relay","macros","tls","serde","websocket","kad"]}
primitives                          = { workspace = true}
sp-runtime                          = { workspace = true, features = ["std"] }
sp-core                             = { workspace = true, features = ["std"] }
serde                               = { workspace = true}
anyhow                              = { workspace = true}
tokio                               = { workspace = true}
log                                 = { workspace = true}
jsonrpsee                           = { workspace = true}
futures                             = { version = "0.3.31", features = ["async-await"]}
