[package]
name = "vane-relay-node"
version = "0.1.0"
edition = "2021"
description = "Native-only relay node implementation for Vane Web3"


[dependencies]

libp2p                              = { workspace = true, features = ["json","relay","macros","tls","serde","websocket","kad","ed25519"]}
primitives                          = { workspace = true}
sp-runtime                          = { workspace = true, features = ["std"] }
sp-core                             = { workspace = true, features = ["std"] }
serde                               = { workspace = true}
anyhow                              = { workspace = true}
tokio                               = { workspace = true}
log                                 = { workspace = true}
jsonrpsee                           = { workspace = true}
futures                             = { version = "0.3.31", features = ["async-await"]}
openssl-sys = { version = "0.9", features = ["vendored"] }
hex = "0.4"

# Metrics and HTTP server dependencies
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
prometheus-client = "0.24"
serde_json = "1.0"
thiserror = "2.0.17"
