[package]
name = "wasm-node"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

reqwasm                                     = {version = "0.5.0", default-features = true}
tokio_with_wasm                             = { workspace = true }
libp2p                                      = { workspace = true, features = ["wasm-bindgen","webtransport-websys","json","relay","macros","tls"]}
libp2p-webtransport-websys                  = { version = "0.5.1"}
serde                                       = { workspace = true}
async-stream                                = { version = "0.3.6"}
futures                                     = { version = "0.3.31", features = ["alloc","async-await"]}
lru                                         = "0.12.5"
alloy                                       = { version = "0.3", default-features = false, features = ["wasm-bindgen","k256", "reqwest"]}
web3                                        = { version = "0.19.0", default-features = false, features = ["wasm","eip-1193","http"]}
wasm-bindgen-futures                        = "0.4.49"
wasm-bindgen                                = "0.2.99"
serde-wasm-bindgen                          = "0.6.5"
serde_json                                  = { workspace = true}
web-sys                                     = "0.3.76"
#subxt                                       = { workspace = true, default-features = false, features = ["web"]}
curve25519-dalek                            = { version = "4.1.3", default-features = false, features = ["alloc"]}
rand                                        = { version = "0.8.5", default-features = false, features = ["alloc"]}
db-wasm                                     = { workspace = true}
anyhow                                      = { workspace = true}
primitives                                  = { workspace = true, features = ["wasm"]}
log                                         = { workspace = true}
codec                                       = { workspace = true}
sp-core                                     = { workspace = true}
sp-runtime                                  = { workspace = true}
hex-literal                                 = "0.4.0"
heapless                                    = "0.7.17"
base58                                      = "0.1.0"