[package]
name = "wasm-node"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

reqwasm                                     = {version = "0.5.0", default-features = true}
tokio_with_wasm                             = { workspace = true }
gloo-timers                                 = { version = "0.3.0", features = ["futures"]}
libp2p                                      = { workspace = true, features = ["wasm-bindgen","websocket-websys","json","relay","macros","tls","noise","serde","kad"]}
libp2p-websocket-websys                  = { version = "0.5.0"}
serde                                       = { workspace = true}
async-stream                                = { version = "0.3.6"}
futures                                     = { version = "0.3.31", features = ["alloc","async-await"]}
lru                                         = "0.12.5"
alloy                                       = { version = "0.3", default-features = false, features = ["wasm-bindgen","k256", "reqwest"]}
web3                                        = { version = "0.19.0", default-features = false, features = ["wasm","eip-1193","http"]}
wasm-bindgen-futures                        = "0.4.49"
wasm-bindgen                                = "0.2.99"
serde-wasm-bindgen                          = "0.6.5"
serde_json                                  = { workspace = true}
web-sys                                     = "0.3.76"
#subxt                                       = { workspace = true, default-features = false, features = ["web"]}
curve25519-dalek                            = { version = "4.1.3", default-features = false, features = ["alloc"] }
getrandom                                   = { version = "0.3.3", features = ["wasm_js"] }
db-wasm                                     = { workspace = true}
anyhow                                      = { workspace = true}
primitives                                  = { workspace = true, features = ["wasm"]}
log                                         = { workspace = true}
codec                                       = { workspace = true}
sp-core                                     = { workspace = true}
sp-runtime                                  = { workspace = true}
hex-literal                                 = "0.4.0"
heapless                                    = "0.7.17"
base58                                      = "0.1.0"
wasm-timer                                  = "0.2.5"
console_error_panic_hook                    = "0.1.7"
js-sys                                      = "0.3.77"